# warlock

./: .gitignore  README.md  config.yaml  pyproject.toml
warlock/: __init__.py  cli.py  config.py  monitor.py
